# cpp_learning_notes

./: CMakeLists.txt  README.md
.github/workflows/: Actions.yml  Builds.yml
docs/: encapsulation_c.md  encapsulation_cpp.md
include/: c2cpp_adapter.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/bitwise/: CMakeLists.txt  bits.h  bitwise.h
src/counter/: CMakeLists.txt  counter.cpp  counter.h  counter.hpp  counter_impl.c
src/drink/: CMakeLists.txt  coke.cpp  coke.hpp  recipe.cpp  recipe.hpp  zero_cola.cpp  zero_cola.hpp
src/endian/: CMakeLists.txt  bytes_swap.h
src/math/: CMakeLists.txt  mathematics.c  mathematics.h
src/playground/: CMakeLists.txt  playground.cpp  playground.hpp
src/structure/: CMakeLists.txt  structure.h
tests/: CMakeLists.txt  test_alignment.cpp  test_bitwise.cpp  test_counter.cpp  test_endian.cpp  test_math.cpp  test_memory.cpp  test_pointer.cpp  test_struct.cpp  test_union.cpp
